# cornerstone-octree

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
cmake/: cstone_add_performance_test.cmake
include/cstone/: CMakeLists.txt  execution.hpp  findneighbors.hpp  reducearray.cuh
include/cstone/cuda/: CMakeLists.txt  annotation.hpp  cub.hpp  cuda_runtime.hpp  cuda_stubs.h  cuda_utils.cuh  cuda_utils.hpp  device_vector.cu  device_vector.h  errorcheck.cuh  gpu_config.cuh  memory.cuh  stream_holder.cuh  thrust_util.cuh
include/cstone/domain/: assignment.hpp  assignment_gpu.cuh  buffer_description.hpp  domain.hpp  domaindecomp.hpp  domaindecomp_gpu.cuh  domaindecomp_mpi.hpp  domaindecomp_mpi_gpu.cuh  exchange_keys.hpp  index_ranges.hpp  layout.hpp
include/cstone/fields/: data_util.hpp  enumerate.hpp  field_get.hpp  field_states.hpp
include/cstone/focus/: CMakeLists.txt  exchange_focus.hpp  inject.hpp  octree_focus.hpp  octree_focus_mpi.hpp  peer_flags.hpp  rebalance.hpp  rebalance_gpu.cu  rebalance_gpu.h  source_center.hpp  source_center_gpu.cu  source_center_gpu.h
include/cstone/halos/: CMakeLists.txt  exchange_halos.hpp  exchange_halos_gpu.cuh  gather_halos_gpu.cu  gather_halos_gpu.h  halo_peers.hpp  halos.hpp
include/cstone/primitives/: CMakeLists.txt  accel_switch.hpp  clz.hpp  concat_vector.hpp  gather.cuh  gather.hpp  gather_acc.hpp  math.hpp  mpi_cuda.cuh  mpi_wrappers.hpp  primitives_acc.hpp  primitives_gpu.cu  primitives_gpu.h  scan.hpp  stl.hpp  warpscan.cuh
include/cstone/sfc/: CMakeLists.txt  box.hpp  box_mpi.hpp  common.hpp  hilbert.hpp  morton.hpp  sfc.hpp  sfc_gpu.cu  sfc_gpu.h
include/cstone/traversal/: CMakeLists.txt  boxoverlap.hpp  collisions.hpp  collisions_gpu.cu  collisions_gpu.h  find_neighbors.cuh  groups.hpp  groups_gpu.cu  groups_gpu.cuh  groups_gpu.h  macs.hpp  peers.hpp  traversal.hpp
include/cstone/traversal/ijloop/: atomic_update_ptr.cuh  common.hpp  compressneighbors.cuh  cpu_alwaystraverse.hpp  cpu_fullnblist.hpp  gpu_alwaystraverse.cuh  gpu_compressednblist.cuh  gpu_fullnblist.cuh  gpu_superclusternblist.cuh  ijloop.hpp  symmetric_loop.cuh  temporaries.cuh  upsweep.cuh
include/cstone/traversal/ijloop/gpu_superclusternblist/: build.cuh  common.cuh  loop.cuh
include/cstone/tree/: CMakeLists.txt  btree.cuh  btree.hpp  continuum.hpp  cs_util.hpp  csarray.hpp  csarray_gpu.cu  csarray_gpu.h  definitions.h  octree.hpp  octree_gpu.cu  octree_gpu.h  update_gpu.cuh  update_mpi.hpp  update_mpi_gpu.cuh
include/cstone/util/: aligned_alloc.hpp  array.hpp  constexpr_string.hpp  fastmath.hpp  noinit_alloc.hpp  noinit_thrust.cuh  pack_buffers.hpp  reallocate.hpp  strong_type.hpp  tuple.hpp  tuple_util.hpp  type_list.hpp  uninitialized.hpp  value_list.hpp
test/: CMakeLists.txt
test/coord_samples/: face_centered_cubic.hpp  plummer.hpp  random.cpp  random.hpp  test_main.cpp
test/integration_mpi/: CMakeLists.txt  assignment_gpu.cpp  box_mpi.cpp  domain_2ranks.cpp  domain_gpu.cpp  domain_nranks.cpp  domain_resize.cpp  exchange_domain.cpp  exchange_domain_gpu.cpp  exchange_focus.cpp  exchange_general.cpp  exchange_general_gpu.cpp  exchange_halos.cpp  exchange_halos_gpu.cpp  exchange_keys.cpp  focus_transfer.cpp  focus_tree.cpp  globaloctree.cpp  test_main.cpp  treedomain.cpp
test/performance/: CMakeLists.txt  a.out  array.hpp  bitops.hpp  box.hpp  boxoverlap.hpp  cluster_overhead.cpp  clz.hpp  common.hpp  csarray.hpp  csv.hpp  cuda_utils.hpp  definitions.h  findneighbors.hpp  gather.hpp  gromacs_ijloop.cuh  hilbert.cpp  hilbert.cu  hilbert.hpp  lennard_jones_driver.cu  morton.hpp  nbbenchmark.cuh  neighbor_driver.cu  octree.cpp  octree.cu  octree.hpp  peers.cpp  random.hpp  reallocate.hpp  scan.cpp  scan.hpp  sfc.hpp  sph_density_driver.cu  stl.hpp  timing.cuh  traversal.hpp  tuple.hpp  util.hpp
test/unit/: CMakeLists.txt
test/unit/domain/: domaindecomp.cpp  index_ranges.cpp  layout.cpp
test/unit/fields/: field_get.cpp
test/unit/focus/: octree_focus.cpp  source_center.cpp
test/unit/neighbors/: all_to_all.hpp  findneighbors.cpp
test/unit/primitives/: clz.cpp  concat_vector.cpp  gather.cpp  math.cpp
test/unit/sfc/: box.cpp  common.cpp  hilbert.cpp  mixed_hilbert.cpp  morton.cpp  sfc.cpp
test/unit/traversal/: boxoverlap.cpp  collisions.cpp  collisions_a2a.cpp  collisions_a2a.hpp  discovery.cpp  macs.cpp  peers.cpp  traversal.cpp
test/unit/tree/: btree.cpp  continuum.cpp  cs_util.cpp  csarray.cpp  octree.cpp
test/unit/util/: array.cpp  pack_buffers.cpp  tuple_util.cpp  type_list.cpp  value_list.cpp
test/unit_cuda/: CMakeLists.txt  test_main.cpp
test/unit_cuda/cuda/: device_vector.cu  memory.cu
test/unit_cuda/domain/: domaindecomp_gpu.cu
test/unit_cuda/focus/: inject.cu  octree_focus.cu
test/unit_cuda/halos/: gather_halos_gpu.cu
test/unit_cuda/neighbors/: compressneighbors.cu  ijloop.cu  ijloop_upsweep.cu  reducearray.cu
test/unit_cuda/primitives/: clz.cu  concat_vector.cu  gather.cu  primitives_gpu.cu  warpscan.cu
test/unit_cuda/sfc/: common.cu
test/unit_cuda/traversal/: groups.cu  macs.cu
test/unit_cuda/tree/: btree.cu  csarray.cu  octree.cu
